# UniPet

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  README_zh.md  ROADMAP.md  SECURITY.md  install.ps1  install.sh  package-lock.json  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
connectors/claude-code/: hook.js  install.js  install.ps1  install.sh
connectors/codex/: hook.js  install.js  install.ps1  install.sh
connectors/deepseek-tui/: hook.js  install.js  install.ps1  install.sh
connectors/hermes/: install.ps1  install.sh
connectors/openclaw/: install.ps1  install.sh
docs/: ARCHITECTURE.md  CODEX_PET_RENDERING_PLAN.md  CONNECTORS.md  CUSTOM_AGENT.md  DEEPSEEK_TUI_CONNECTOR.md  HERMES_SKILL_CONTRACT.md  IMPLEMENTATION_PLAN.md  NODE_RUNTIME.md  OPENCLAW_CONNECTOR.md  PET_FORMAT.md  PROTOCOL.md  RENDER_ARCHITECTURE.md  RUNNABLE_MVP.md  USAGE.md  VISION.md
docs/releases/: v0.1.4.md  v0.1.4.zh.md  v0.1.5.md  v0.1.5.zh.md
examples/: curl-event.json  node-demo.js  shell-demo.sh
overlay/: behavior.js  cli.js  connectors.js  core.js  index.html  main.js  market.js  package-lock.json  package.json  pets.js  preload.js  protocol.js  renderer.js  styles.css
overlay/life/: bubble.js  interpreter.js  planner.js
overlay/tests/: behavior.test.js  bubble.test.js  cli.test.js  connectors.test.js  core.test.js  market.test.js  pets.test.js  (+2 more)
scripts/: run-tests.js  smoke-install.js  smoke-overlay.js
tests/: test_bridge_store.py  test_protocol.py
(+21 files in other folders)
