[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unipet"
version = "0.1.0"
description = "Universal Desktop Pet for AI Coding Agents — compatible with Codex Pet 8x9 spritesheet format"
readme = "README.md"
authors = [{ name = "UniPet Contributors" }]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "desktop-companion",
    "codex-pet",
    "cli",
    "electron",
    "spritesheet",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
unipet = "unipet.cli:main"
unipet-bridge = "unipet.bridge:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["unipet*"]
namespaces = false

[tool.setuptools.package-data]
unipet = [
    "overlay/package.json",
    "overlay/main.js",
    "overlay/preload.js",
    "overlay/renderer.js",
    "overlay/index.html",
    "overlay/styles.css",
    "assets/default/spritesheet.webp",
    "assets/default/pet.json",
]
